--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "aos": "^2.3.4",
         "bootstrap": "^5.3.3",
+        "crypto-js": "^4.2.0",
         "emailjs-com": "^3.2.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
