--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@babel/core": "^7.24.6",
+        "@babel/preset-react": "^7.24.6",
         "aos": "^2.3.4",
+        "babel-loader": "^9.1.3",
         "bootstrap": "^5.3.3",
         "crypto-js": "^4.2.0",
         "emailjs-com": "^3.2.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.22.3",
+        "laravel-mix": "^6.0.49",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "react-router-dom": "^6.23.1",
         "react-simple-typewriter": "^5.0.1",
         "react-toastify": "^10.0.5"
     }
