--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^4.2.1",
+        "@vitejs/plugin-react": "^4.3.0",
         "axios": "^1.6.8",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.0.0"
+        "vite": "^5.2.12"
     },
     "dependencies": {
         "@babel/core": "^7.24.6",
         "@babel/preset-react": "^7.24.6",
+        "@vitejs/plugin-react-refresh": "^1.3.6",
         "aos": "^2.3.4",
         "babel-loader": "^9.1.3",
         "bootstrap": "^5.3.3",
@@ -23,6 +24,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-router-dom": "^6.23.1",
+        "react-scripts": "^5.0.1",
         "react-simple-typewriter": "^5.0.1",
         "react-toastify": "^10.0.5"
     }
