--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "dependencies": {
         "@babel/core": "^7.24.6",
         "@babel/preset-react": "^7.24.6",
+        "@ckeditor/ckeditor5-build-classic": "^44.2.1",
+        "@ckeditor/ckeditor5-react": "^9.5.0",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "aos": "^2.3.4",
         "babel-loader": "^9.1.3",
         "bootstrap": "^5.3.3",
+        "ckeditor4-react": "^5.2.1",
         "crypto-js": "^4.2.0",
         "emailjs-com": "^3.2.0",
         "laravel-mix": "^6.0.49",
