--- a/package.json
+++ b/package.json
@@ -6,23 +6,23 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.26.3",
         "@vitejs/plugin-react": "^4.3.0",
         "axios": "^1.6.8",
         "laravel-vite-plugin": "^1.0.0",
-        "vite": "^5.2.12"
+        "vite": "^5.4.14"
     },
     "dependencies": {
         "@babel/core": "^7.24.6",
-        "@babel/preset-react": "^7.24.6",
-        "@ckeditor/ckeditor5-build-classic": "^44.2.1",
+        "@ckeditor/ckeditor5-build-classic": "^43.0.0",
         "@ckeditor/ckeditor5-react": "^9.5.0",
         "@vitejs/plugin-react-refresh": "^1.3.6",
         "aos": "^2.3.4",
         "babel-loader": "^9.1.3",
         "bootstrap": "^5.3.3",
-        "ckeditor4-react": "^5.2.1",
         "crypto-js": "^4.2.0",
         "emailjs-com": "^3.2.0",
+        "globals": "^16.0.0",
         "laravel-mix": "^6.0.49",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
